==> MikroElektronika/mikrosdk_v2/targets/pic_32bit/mikroe/pic32/src/adc/implementation_1/hal_ll_adc.c <==
#include "hal_ll_adc.h"
#include "hal_ll_gpio.h"
#include "hal_ll_analog_in_map.h"
#define hal_ll_adc_get_module_state_address ((hal_ll_adc_handle_register_t *)*handle)
#define hal_ll_adc_get_handle ((hal_ll_adc_handle_register_t *)hal_ll_adc_get_module_state_address->hal_ll_adc_handle)
#define hal_ll_adc_get_base_from_hal_handle (((hal_ll_adc_hw_specifics_map_t *)(low_level_handle->hal_ll_adc_handle))->ch_enable)
#define hal_ll_adc_module_num(_module_num) (_module_num - 1)
#define HAL_LL_AD1CON1_INTERNAL_COUNTER_END_BITS                      ( ( uint32_t ) 0x00E0 )
#define HAL_LL_AD1CON1_ON_BIT                                         ( ( uint8_t ) 15 )
#define HAL_LL_AD1CON1_DONE_BIT                                       ( ( uint8_t ) 0 )
#define HAL_LL_AD1CON1_SAMP_BIT                                       ( ( uint8_t ) 1 )
#define HAL_LL_AD1CON2_VCFG_EXTERNAL_BITS                             ( ( uint32_t ) 0x6000 )
#define HAL_LL_AD1CON2_VCFG_INTERNAL_CLEAR_MASK                       ( ( uint32_t ) 0xE000 )
#define HAL_LL_AD1CON2_VCFG_VREFH_INTERNAL_VREFL_EXTERNAL_BITS        ( ( uint32_t ) 0x4000 )
#define HAL_LL_AD1CON2_VCFG_VREFH_EXTERNAL_VREFL_INTERNAL_BITS        ( ( uint32_t ) 0x2000 )
#define HAL_LL_AD1CON2_SKIP_INPUT_SCAN_BITS                           ( ( uint32_t ) 0x0000 )
#define HAL_LL_AD1CON3_SAMPLE_TIME_31_CYCLE_BITS                      ( ( uint32_t ) 0x1FFF )
#define HAL_LL_PMD1_ADCMD_BIT                                         ( ( uint8_t ) 0 )

hal_ll_err_t hal_ll_adc_register_handle(
    hal_ll_pin_name_t               pin,
    hal_ll_adc_voltage_reference_t  vref_input,
    hal_ll_adc_resolution_t         resolution,
    hal_ll_adc_handle_register_t    *handle_map,
    uint8_t                         *hal_module_id
) {
    uint8_t index;
    hal_ll_pin_name_t pin_check_result = _hal_ll_adc_check_pins( pin, &index, handle_map );

    // see if requested pin supports analog input
    if ( HAL_LL_PIN_NC == pin_check_result ) {
        return HAL_LL_ADC_WRONG_PIN;
    }

    // pic32mx has only 10 bit ADC resolution
    if ( HAL_LL_ADC_RESOLUTION_10_BIT == resolution ) {
        hal_ll_adc_hw_specifics_map[pin_check_result].resolution = HAL_LL_ADC_RESOLUTION_10_BIT;
    } else {
        return HAL_LL_ADC_UNSUPPORTED_RESOLUTION;
    }

    // set desired state of hardware to hardwer specific map
    // switch only validates if the vref_input variable is in the enum range
    switch ( vref_input )
    {
        case HAL_LL_ADC_VREF_EXTERNAL:
        case HAL_LL_ADC_VREF_INTERNAL:
        case HAL_LL_ADC_VREF_DEFAULT:
            hal_ll_adc_hw_specifics_map[pin_check_result].vref_input = vref_input;
            break;

        default:
            return HAL_LL_ADC_UNSUPPORTED_VREF;
     }

    if ( hal_ll_adc_hw_specifics_map[pin_check_result].pin != pin ) {
        // copy pin information from 'analog in' list to hw specific map element at 'index' index
        _hal_ll_adc_map_pin( pin_check_result, index );
        // after the hw specific map has been mapped, mark it as uninitialized so next time it's used
        // it will trigger hal_ll_module_configure_adc to actualy initialize hardware
        handle_map[pin_check_result]->init_ll_state = false;
    }

    *hal_module_id = pin_check_result;

    // set register for configuring analog pin
    hal_ll_module_state[pin_check_result].hal_ll_adc_handle = (handle_t *)&hal_ll_adc_hw_specifics_map[pin_check_result].ch_enable;

    handle_map[pin_check_result]->hal_ll_adc_handle = (handle_t *)&hal_ll_module_state[pin_check_result].hal_ll_adc_handle;

    return HAL_LL_ADC_SUCCESS;
}

hal_ll_err_t hal_ll_module_configure_adc( handle_t *handle ) {
    hal_ll_adc_hw_specifics_map_local = _hal_ll_get_specifics(handle);
    hal_ll_adc_handle_register_t *hal_handle = (hal_ll_adc_handle_register_t *)*handle;
    uint8_t pin_check_result = hal_ll_adc_hw_specifics_map_local->module_index;

    // initialize adc registers
    _hal_ll_adc_init( hal_ll_adc_hw_specifics_map_local );

    hal_ll_module_state[pin_check_result].hal_ll_adc_handle = (handle_t *)&hal_ll_adc_hw_specifics_map[pin_check_result].ch_enable;
    hal_ll_module_state[pin_check_result].init_ll_state = true;
    hal_handle->init_ll_state = true;

    return HAL_LL_ADC_SUCCESS;
}

hal_ll_err_t hal_ll_adc_set_resolution( handle_t *handle, hal_ll_adc_resolution_t resolution ) {
    hal_ll_adc_hw_specifics_map_local = _hal_ll_get_specifics(handle); // this function will update low_level_handle

    if ( HAL_LL_ADC_RESOLUTION_10_BIT == resolution ) {
        hal_ll_adc_hw_specifics_map_local->resolution = HAL_LL_ADC_RESOLUTION_10_BIT;
    } else {
        // in case of bad resolution function will fail leaving low_level handle marked as uninitialized
        // trigerring configure action from upper layer on next read
        low_level_handle->init_ll_state = false;
        return HAL_LL_ADC_UNSUPPORTED_RESOLUTION;
    }

    // reinitialize the hardware since resolution is changed
    _hal_ll_adc_init( hal_ll_adc_hw_specifics_map_local );

    // hardware is reinitialized, make sure low_level_handle reflects that
    low_level_handle->init_ll_state = true;

    return HAL_LL_ADC_SUCCESS;
}

hal_ll_err_t hal_ll_adc_set_vref_input( handle_t *handle, hal_ll_adc_voltage_reference_t vref_input ) {
    hal_ll_adc_hw_specifics_map_local = _hal_ll_get_specifics(handle); // this function will update low_level_handle

    // validating if the vref input is inside the enum range
    switch ( vref_input )
    {
        case HAL_LL_ADC_VREF_EXTERNAL:
        case HAL_LL_ADC_VREF_INTERNAL:
        case HAL_LL_ADC_VREF_DEFAULT:
            hal_ll_adc_hw_specifics_map_local->vref_input = vref_input;
            break;

        default:
            // in case of bad vref, function will fail leaving low_level_handle marked as uninitialized
            // trigerring configure action from upper layer on next read
            low_level_handle->init_ll_state = false;
            return HAL_LL_ADC_UNSUPPORTED_VREF;
    }

    // reinitialize the hardware since vref input has changed
    _hal_ll_adc_init( hal_ll_adc_hw_specifics_map_local );

    // mark handle to hardware as intitialized
    low_level_handle->init_ll_state = true;

    return HAL_LL_ADC_SUCCESS;
}

hal_ll_err_t hal_ll_adc_read( handle_t *handle, uint16_t *read_buff ) {
    hal_ll_adc_hw_specifics_map_local = _hal_ll_get_specifics( handle );

    // initialize sampling
    set_reg_bit( HAL_LL_AD1CON1_ADDRESS,  HAL_LL_AD1CON1_SAMP_BIT );
    // wait until conversion is done
    while ( !check_reg_bit( HAL_LL_AD1CON1_ADDRESS, HAL_LL_AD1CON1_DONE_BIT ) ) {
        continue;
    }
    // read data
    *read_buff = *( uint16_t *) HAL_LL_ADC1BUF0_ADDRESS;
    // stop sampling
    clear_reg_bit( HAL_LL_AD1CON1_ADDRESS,  HAL_LL_AD1CON1_SAMP_BIT );

    return HAL_LL_ADC_SUCCESS;
}

static void _hal_ll_adc_map_pin( uint8_t module_index, uint8_t index ) {
    // simple copying of elements
    hal_ll_adc_hw_specifics_map[ module_index ].pin       = hal_ll_analog_in_register_list[ index ].pin;
    hal_ll_adc_hw_specifics_map[ module_index ].ch_enable = hal_ll_analog_in_register_list[ index ].analog_in_register_addr;
    hal_ll_adc_hw_specifics_map[ module_index ].channel   = hal_ll_analog_in_register_list[ index ].channel;
}

static void _hal_ll_adc_hw_init(uint32_t channel, hal_ll_adc_voltage_reference_t vref) {
    // intenal counter ends conversion, automatic conversion
    // since whole register by reset is 0, output form is 16bit unsigned integer arranged
    // in a way such that no shifting is needed
    write_reg( HAL_LL_AD1CON1_ADDRESS, HAL_LL_AD1CON1_INTERNAL_COUNTER_END_BITS );
    asm nop;

    // select channel for sampling
    write_reg( HAL_LL_AD1CHS_ADDRESS, ((uint32_t)hal_ll_adc_hw_specifics_map_local->channel) << 16);

    // do not scan inputs, buffer configure as one 16-word buffer, etc.
    write_reg( HAL_LL_AD1CON2_ADDRESS, HAL_LL_AD1CON2_SKIP_INPUT_SCAN_BITS );

    // set referenca voltage
    switch ( vref )
    {
        case HAL_LL_ADC_VREF_DEFAULT:
        case HAL_LL_ADC_VREF_EXTERNAL:
            set_reg_bits( HAL_LL_AD1CON2_ADDRESS, HAL_LL_AD1CON2_VCFG_VREFH_EXTERNAL_VREFL_INTERNAL_BITS );
            break;
        case HAL_LL_ADC_VREF_INTERNAL:
            clear_reg_bits( HAL_LL_AD1CON2_ADDRESS, HAL_LL_AD1CON2_VCFG_INTERNAL_CLEAR_MASK );
            break;

        default:
            // unreachable
            break;
    }

    // sample time == 31 Tad. Tad = 512*Tpb
    write_reg( HAL_LL_AD1CON3_ADDRESS, HAL_LL_AD1CON3_SAMPLE_TIME_31_CYCLE_BITS );
    // all analog channels omitted from input scan
    clear_reg( HAL_LL_AD1CSSL_ADDRESS );
    // turn on ADC
    set_reg_bit( HAL_LL_AD1CON1_ADDRESS, HAL_LL_AD1CON1_ON_BIT );
}

static void _hal_ll_adc_init( hal_ll_adc_hw_specifics_map_t *map ) {
    #if defined( PIC32MX1xx ) || defined( PIC32MX2xx ) || defined( PIC32MX530xx ) || defined( PIC32MX550xx ) || defined( PIC32MX570xx )
    clear_reg_bit( HAL_LL_PMD1_ADDRESS, HAL_LL_PMD1_ADCMD_BIT );
    #endif

    // set AD1PCFG & TRIS registers to appropriate state
    hal_ll_gpio_port_analog_input(
        hal_ll_gpio_port_base_map( hal_ll_gpio_port_index( map->pin ) ),
        map->pin
    );

    // configure AD1CON1, AD1CON2, AD1CON3, AD1CSSL registers
    _hal_ll_adc_hw_init( map->channel, map->vref_input );
}
